# OpenGL

./: CMakeLists.txt  HelloShader.cpp  HelloTexture.cpp  HelloTriangle.cpp  Shader.h  main.cpp  vertor.md
dependencies/GLAD/include/glad/: glad.h
dependencies/GLAD/include/src/: glad.c
dependencies/IMAGE/: stb_image.h
res/shaders/: BasicShader.shader  HelloTextureFramentShader.glsl  HelloTextureVerShader.glsl  HelloTriangleFrament.glsl  HelloTriangleVertex.glsl
